# annolid

./: pyproject.toml  setup.py
annolid/gui/: shape.py
annolid/utils/: files.py
docker/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
