[tool.poetry]
name = "annolid"
version = "0.1.0"
description = ""
authors = ["jeremyf <jerem.forest@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = "^3.2"
PyYAML = "^6.0"
decord = "^0.6"
pycocotools = "^2.0"
dataclasses = [{version = "^0.6", python = "<3.7"}]
pandas = "^2.1"
imageio = "^2.33"
imageio-ffmpeg = "^0.4"
gdown = "^4.7"
segment-anything-py = "^1.0"
scipy = "^1.11"
easydict = "^1.11"
sounddevice = "^0.4"
librosa = "^0.10"
qimage2ndarray = "^1.10"
opencv-python-headless = "^4.8"
qtpy = "^2.4"
simplification = "^0.7"
pyqt5 = "5.15"
tensorboard = "^2.15"
pyqtwebengine = "^5.15"
pillow = "^8.3"
torch = {version = "^2.1.1+cpu", source = "pytorch"}
torchvision = {version = "^0.16.1+cpu", source = "pytorch"}
pyqt5-sip = "^12.13"
fvcore = "^0.1.5.post20221221"
labelme = {git = "https://github.com/wkentaro/labelme.git"}

[tool.poetry.dev-dependencies]

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
